--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,91 +67,81 @@
        "      <th>0</th>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.180400</td>\n",
+       "      <td>0.196734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>15</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.083647</td>\n",
+       "      <td>0.004002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>102</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.469593</td>\n",
+       "      <td>0.460798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>336</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.722741</td>\n",
+       "      <td>0.676030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>304</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.691372</td>\n",
+       "      <td>0.655259</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>62</td>\n",
+       "      <th>5</th>\n",
+       "      <td>44</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.439348</td>\n",
+       "      <td>0.377946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>219</td>\n",
+       "      <th>6</th>\n",
+       "      <td>249</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.558472</td>\n",
+       "      <td>0.614473</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>10</td>\n",
+       "      <th>7</th>\n",
+       "      <td>31</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.206225</td>\n",
+       "      <td>0.317266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>67</td>\n",
+       "      <th>8</th>\n",
+       "      <td>35</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.455979</td>\n",
+       "      <td>0.338983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>17</td>\n",
+       "      <th>9</th>\n",
+       "      <td>160</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.246809</td>\n",
+       "      <td>0.540070</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    lead_time  booking_changes  is_canceled\n",
-       "0           5                0     0.180400\n",
-       "1          15                3     0.083647\n",
-       "2         102                0     0.469593\n",
-       "3         336                0     0.722741\n",
-       "4         304                0     0.691372\n",
-       "..        ...              ...          ...\n",
-       "95         62                0     0.439348\n",
-       "96        219                0     0.558472\n",
-       "97         10                0     0.206225\n",
-       "98         67                0     0.455979\n",
-       "99         17                0     0.246809\n",
-       "\n",
-       "[100 rows x 3 columns]"
+       "   lead_time  booking_changes  is_canceled\n",
+       "0          5                0     0.196734\n",
+       "1         15                3     0.004002\n",
+       "2        102                0     0.460798\n",
+       "3        336                0     0.676030\n",
+       "4        304                0     0.655259\n",
+       "5         44                0     0.377946\n",
+       "6        249                0     0.614473\n",
+       "7         31                0     0.317266\n",
+       "8         35                0     0.338983\n",
+       "9        160                0     0.540070"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -194,90 +184,120 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-185.689617</td>\n",
-       "      <td>0.749337</td>\n",
-       "      <td>0.011848</td>\n",
+       "      <td>-27.675576</td>\n",
+       "      <td>0.082796</td>\n",
+       "      <td>0.099768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-211.033237</td>\n",
-       "      <td>4.381826</td>\n",
-       "      <td>0.003547</td>\n",
+       "      <td>16.420959</td>\n",
+       "      <td>3.003269</td>\n",
+       "      <td>0.004049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>341.884936</td>\n",
-       "      <td>-1.534492</td>\n",
-       "      <td>0.986859</td>\n",
+       "      <td>170.649723</td>\n",
+       "      <td>-0.049722</td>\n",
+       "      <td>0.566292</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>547.634998</td>\n",
-       "      <td>-1.338327</td>\n",
-       "      <td>0.990099</td>\n",
+       "      <td>339.902986</td>\n",
+       "      <td>-0.050915</td>\n",
+       "      <td>0.694042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>538.119511</td>\n",
-       "      <td>-1.474443</td>\n",
-       "      <td>0.992167</td>\n",
+       "      <td>309.304339</td>\n",
+       "      <td>-0.053154</td>\n",
+       "      <td>0.674890</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>-21.122848</td>\n",
+       "      <td>0.144486</td>\n",
+       "      <td>0.105640</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>267.328818</td>\n",
-       "      <td>-1.708036</td>\n",
-       "      <td>0.988066</td>\n",
+       "      <th>6</th>\n",
+       "      <td>283.514259</td>\n",
+       "      <td>-0.281956</td>\n",
+       "      <td>0.680484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>422.625213</td>\n",
-       "      <td>-1.352951</td>\n",
-       "      <td>0.985596</td>\n",
+       "      <th>7</th>\n",
+       "      <td>-22.908241</td>\n",
+       "      <td>0.130589</td>\n",
+       "      <td>0.103603</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>-170.423017</td>\n",
-       "      <td>0.763208</td>\n",
-       "      <td>0.014143</td>\n",
+       "      <th>8</th>\n",
+       "      <td>48.835124</td>\n",
+       "      <td>-0.052905</td>\n",
+       "      <td>0.398829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>295.948675</td>\n",
-       "      <td>-1.561551</td>\n",
-       "      <td>0.985542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>-156.069028</td>\n",
-       "      <td>0.729973</td>\n",
-       "      <td>0.016855</td>\n",
+       "      <th>9</th>\n",
+       "      <td>78.794604</td>\n",
+       "      <td>0.111577</td>\n",
+       "      <td>0.397416</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     lead_time  booking_changes  is_canceled\n",
-       "0  -185.689617         0.749337     0.011848\n",
-       "1  -211.033237         4.381826     0.003547\n",
-       "2   341.884936        -1.534492     0.986859\n",
-       "3   547.634998        -1.338327     0.990099\n",
-       "4   538.119511        -1.474443     0.992167\n",
-       "..         ...              ...          ...\n",
-       "95  267.328818        -1.708036     0.988066\n",
-       "96  422.625213        -1.352951     0.985596\n",
-       "97 -170.423017         0.763208     0.014143\n",
-       "98  295.948675        -1.561551     0.985542\n",
-       "99 -156.069028         0.729973     0.016855\n",
-       "\n",
-       "[100 rows x 3 columns]"
+       "    lead_time  booking_changes  is_canceled\n",
+       "0  -27.675576         0.082796     0.099768\n",
+       "1   16.420959         3.003269     0.004049\n",
+       "2  170.649723        -0.049722     0.566292\n",
+       "3  339.902986        -0.050915     0.694042\n",
+       "4  309.304339        -0.053154     0.674890\n",
+       "5  -21.122848         0.144486     0.105640\n",
+       "6  283.514259        -0.281956     0.680484\n",
+       "7  -22.908241         0.130589     0.103603\n",
+       "8   48.835124        -0.052905     0.398829\n",
+       "9   78.794604         0.111577     0.397416"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counterfactual"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41815602205999997"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factual['is_canceled'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3725012649"
       ]
      },
      "execution_count": 7,
@@ -286,7 +306,47 @@
     }
    ],
    "source": [
-    "counterfactual"
+    "counterfactual['is_canceled'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factual.booking_changes.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2984064805595042"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counterfactual.booking_changes.mean()"
    ]
   },
   {
