analysis notebook updated

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -65,63 +65,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
+       "      <td>35</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.196734</td>\n",
+       "      <td>0.380332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.004002</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.446267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>102</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.460798</td>\n",
+       "      <td>0.147630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>336</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.676030</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.093440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>304</td>\n",
+       "      <td>6</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.655259</td>\n",
+       "      <td>0.173178</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>44</td>\n",
+       "      <td>12</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.377946</td>\n",
+       "      <td>0.217856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>249</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.614473</td>\n",
+       "      <td>0.141751</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>31</td>\n",
+       "      <td>162</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.317266</td>\n",
+       "      <td>0.493088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>35</td>\n",
+       "      <td>250</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.338983</td>\n",
+       "      <td>0.612698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>160</td>\n",
+       "      <td>165</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.540070</td>\n",
+       "      <td>0.496249</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -129,16 +129,16 @@
       ],
       "text/plain": [
        "   lead_time  booking_changes  is_canceled\n",
-       "0          5                0     0.196734\n",
-       "1         15                3     0.004002\n",
-       "2        102                0     0.460798\n",
-       "3        336                0     0.676030\n",
-       "4        304                0     0.655259\n",
-       "5         44                0     0.377946\n",
-       "6        249                0     0.614473\n",
-       "7         31                0     0.317266\n",
-       "8         35                0     0.338983\n",
-       "9        160                0     0.540070"
+       "0         35                0     0.380332\n",
+       "1         87                0     0.446267\n",
+       "2          2                0     0.147630\n",
+       "3         48                2     0.093440\n",
+       "4          6                0     0.173178\n",
+       "5         12                0     0.217856\n",
+       "6          1                0     0.141751\n",
+       "7        162                0     0.493088\n",
+       "8        250                0     0.612698\n",
+       "9        165                0     0.496249"
       ]
      },
      "execution_count": 4,
@@ -184,63 +184,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-27.675576</td>\n",
-       "      <td>0.082796</td>\n",
-       "      <td>0.099768</td>\n",
+       "      <td>35.835574</td>\n",
+       "      <td>-0.010555</td>\n",
+       "      <td>0.384997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>16.420959</td>\n",
-       "      <td>3.003269</td>\n",
-       "      <td>0.004049</td>\n",
+       "      <td>100.701171</td>\n",
+       "      <td>-0.147769</td>\n",
+       "      <td>0.481608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>170.649723</td>\n",
-       "      <td>-0.049722</td>\n",
-       "      <td>0.566292</td>\n",
+       "      <td>1.543849</td>\n",
+       "      <td>-0.005207</td>\n",
+       "      <td>0.145972</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>339.902986</td>\n",
-       "      <td>-0.050915</td>\n",
-       "      <td>0.694042</td>\n",
+       "      <td>64.269392</td>\n",
+       "      <td>1.937958</td>\n",
+       "      <td>0.112608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>309.304339</td>\n",
-       "      <td>-0.053154</td>\n",
-       "      <td>0.674890</td>\n",
+       "      <td>-4.264569</td>\n",
+       "      <td>0.009205</td>\n",
+       "      <td>0.118994</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>-21.122848</td>\n",
-       "      <td>0.144486</td>\n",
-       "      <td>0.105640</td>\n",
+       "      <td>3.608891</td>\n",
+       "      <td>0.010795</td>\n",
+       "      <td>0.155204</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>283.514259</td>\n",
-       "      <td>-0.281956</td>\n",
-       "      <td>0.680484</td>\n",
+       "      <td>11.889563</td>\n",
+       "      <td>-0.009178</td>\n",
+       "      <td>0.219499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>-22.908241</td>\n",
-       "      <td>0.130589</td>\n",
-       "      <td>0.103603</td>\n",
+       "      <td>141.807265</td>\n",
+       "      <td>0.312219</td>\n",
+       "      <td>0.401004</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>48.835124</td>\n",
-       "      <td>-0.052905</td>\n",
-       "      <td>0.398829</td>\n",
+       "      <td>241.418233</td>\n",
+       "      <td>0.045382</td>\n",
+       "      <td>0.583865</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>78.794604</td>\n",
-       "      <td>0.111577</td>\n",
-       "      <td>0.397416</td>\n",
+       "      <td>163.090685</td>\n",
+       "      <td>0.004685</td>\n",
+       "      <td>0.492971</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -248,16 +248,16 @@
       ],
       "text/plain": [
        "    lead_time  booking_changes  is_canceled\n",
-       "0  -27.675576         0.082796     0.099768\n",
-       "1   16.420959         3.003269     0.004049\n",
-       "2  170.649723        -0.049722     0.566292\n",
-       "3  339.902986        -0.050915     0.694042\n",
-       "4  309.304339        -0.053154     0.674890\n",
-       "5  -21.122848         0.144486     0.105640\n",
-       "6  283.514259        -0.281956     0.680484\n",
-       "7  -22.908241         0.130589     0.103603\n",
-       "8   48.835124        -0.052905     0.398829\n",
-       "9   78.794604         0.111577     0.397416"
+       "0   35.835574        -0.010555     0.384997\n",
+       "1  100.701171        -0.147769     0.481608\n",
+       "2    1.543849        -0.005207     0.145972\n",
+       "3   64.269392         1.937958     0.112608\n",
+       "4   -4.264569         0.009205     0.118994\n",
+       "5    3.608891         0.010795     0.155204\n",
+       "6   11.889563        -0.009178     0.219499\n",
+       "7  141.807265         0.312219     0.401004\n",
+       "8  241.418233         0.045382     0.583865\n",
+       "9  163.090685         0.004685     0.492971"
       ]
      },
      "execution_count": 5,
@@ -277,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "0.41815602205999997"
+       "0.32024891499999997"
       ]
      },
      "execution_count": 6,
@@ -297,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "0.3725012649"
+       "0.309672289"
       ]
      },
      "execution_count": 7,
@@ -311,33 +311,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factual.booking_changes.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2984064805595042"
+       "76.8"
       ]
      },
      "execution_count": 14,
@@ -346,7 +326,27 @@
     }
    ],
    "source": [
-    "counterfactual.booking_changes.mean()"
+    "factual.lead_time.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75.99000528079708"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counterfactual.lead_time.mean()"
    ]
   },
   {
