--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\leiyo\\Anaconda3\\lib\\site-packages\\scipy\\__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
+      "DEBUG:root:test\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
@@ -15,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +34,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = pd.read_csv('data/hotel_booking/hotel_bookings.csv')\n",
+    "df = df_.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          True\n",
+       "1          True\n",
+       "2          True\n",
+       "3          True\n",
+       "4          True\n",
+       "          ...  \n",
+       "119385    False\n",
+       "119386    False\n",
+       "119387    False\n",
+       "119388    False\n",
+       "119389    False\n",
+       "Name: arrival_date_year, Length: 119390, dtype: bool"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['arrival_date_year']==2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
