--- a/baseline_experiments_compas.ipynb
+++ b/baseline_experiments_compas.ipynb
@@ -2357,11 +2357,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "import pickle \n",
-    "dump_data_path = './data/baseline/'\n",
-    "with open(os.path.join(dump_data_path, f\"dice_results_{model.name}_{name}.pkl\"), \"wb\") as file:\n",
-    "    pickle.dump(dice_results, file)"
+    "# import os \n",
+    "# import pickle \n",
+    "# dump_data_path = './data/baseline/'\n",
+    "# with open(os.path.join(dump_data_path, f\"dice_results_{model.name}_{name}.pkl\"), \"wb\") as file:\n",
+    "#     pickle.dump(dice_results, file)"
    ]
   },
   {
@@ -2511,11 +2511,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "import pickle \n",
-    "dump_data_path = './data/baseline/'\n",
-    "with open(os.path.join(dump_data_path, f\"explainer_{model.name}_{name}.pkl\"), \"wb\") as file:\n",
-    "    pickle.dump(explainer, file)"
+    "# import os \n",
+    "# import pickle \n",
+    "# dump_data_path = './data/baseline/'\n",
+    "# with open(os.path.join(dump_data_path, f\"explainer_{model.name}_{name}.pkl\"), \"wb\") as file:\n",
+    "#     pickle.dump(explainer, file)"
    ]
   },
   {
