--- a/baseline_experiments_heloc.ipynb
+++ b/baseline_experiments_heloc.ipynb
@@ -1672,11 +1672,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "import pickle \n",
-    "dump_data_path = './data/baseline/'\n",
-    "with open(os.path.join(dump_data_path, f\"dice_results_{model.name}_heloc.pkl\"), 'rb') as file:\n",
-    "    dice_results = pickle.load(file)"
+    "# import os \n",
+    "# import pickle \n",
+    "# dump_data_path = './data/baseline/'\n",
+    "# with open(os.path.join(dump_data_path, f\"dice_results_{model.name}_heloc.pkl\"), 'rb') as file:\n",
+    "#     dice_results = pickle.load(file)"
    ]
   },
   {
@@ -2622,11 +2622,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "import pickle \n",
-    "dump_data_path = './data/baseline/'\n",
-    "with open(os.path.join(dump_data_path, f\"explainer_{model.name}_heloc.pkl\"), 'rb') as file:\n",
-    "    explainer = pickle.load(file)"
+    "# import os \n",
+    "# import pickle \n",
+    "# dump_data_path = './data/baseline/'\n",
+    "# with open(os.path.join(dump_data_path, f\"explainer_{model.name}_heloc.pkl\"), 'rb') as file:\n",
+    "#     explainer = pickle.load(file)"
    ]
   },
   {
